# aterm

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README.md  aclocal.m4  aterm.pc.in  aterm.spec  configure  configure.ac  install.sh  meson.build  meta-build.m4
aterm/: Makefile.in  _aterm.h  aterm.c  bafio.c  encoding.h  gc.c  hash.c  make.c  memmgnt.c  memory.c  tafio.c
src/: afun.c  atypes.h  bafio.c  encoding.h  gc.c  idmappings.c  list.c  make.c  memory.c  memory.h  meson.build
test/: Makefile.am  Makefile.in  meson.build  primes.c  stress.c
utils/: Makefile.am  Makefile.in  baffle.c  dicttoc.c  meson.build
