
dicttoc_exe = executable('dicttoc', 'dicttoc.c',
    include_directories : aterm_include_dirs,
    link_with : aterm_library,
    install: true)

atdiff_exe = executable('atdiff', 'atdiff.c',
    include_directories : aterm_include_dirs,
    link_with : aterm_library,
    install: true)

baffle_exe = executable('baffle', 'baffle.c',
    include_directories : aterm_include_dirs,
    link_with : aterm_library,
    install: true)
